# ontology-weaver

./: .gitattributes  .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/: pull_request_template.md
.github/workflows/: curation-ci.yml  pr-mermaid-review.yml
curation_app/: __init__.py  auto_sync.py  config.py  context.py  helpers.py
curation_app/pages/: __init__.py  add_terms.py  curate_candidates.py  download_sources.py  extract_terms.py  finalize_validate.py  generate_candidates.py  ols_ontologies.py  overview.py  sqlite_inspect.py  sync_export.py  view_schema.py
registry/: PAIRWISE_WORKFLOW.md  VALIDATION.md  alignment_curation.sqlite  curators.tsv  downloads_meta.json  external_sources.tsv  mapping_relations_catalog.json  ols_ontologies_meta.json  pair_alignment_candidates.tsv  pair_alignment_candidates_emi.tsv  pair_alignment_candidates_enpkg.tsv  pair_alignments.tsv  reconciled_canonical_groups.tsv  reconciled_mappings.tsv  tmpiwn5vp6w_ols_ontologies.tsv
registry/exports/: emi_curated_alignments.ttl  emi_updated.ttl  (+1 more)
scripts/: build_widoco_static_index.py  build_widoco_webvowl_file_index.py  download_external_sources.py  download_ols_ontologies.py  export_reconciled_mappings.py  export_updated_ttl.py  extract_ttl_terms.py  fetch_mapping_relations_catalog.py  fetch_ols_ontologies.py  finalize_pair_alignment_candidates.py  generate_pr_mermaid_review.py  patch_widoco_webvowl_file_mode.py  review_pair_candidates.py  serve_widoco_output.py  setup_widoco_tools.sh  suggest_pairwise_alignments.py  sync_alignment_sqlite.py  validate_pair_alignments.py
(+46 files in other folders)
